--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,13 @@
     <link rel="stylesheet" href="/client/styles.css">
     <title>Home page</title>
 </head>
-<body>
-    <h2>Home page</h2>
-</body>
+    <body>
+        <h2>Home page</h2>
+        <h3>Автомобили</h3>
+        <button id="get_cars_button">Показать</button>
+        <div id="cars"></div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <script src="/client/script.js"></script>
+    </body>
 </html>
