--- a/client/register.html
+++ b/client/register.html
@@ -7,12 +7,15 @@
 </head>
 <body>
     <h2>Register</h2>
-    <form action="/register" method="post">
+    <form action="/register" method="post"  id="register_form">
         <label for="login">Login:</label>
         <input id="login" type="text" name="login" autocomplete="off">
         <label for="password">Password:</label>
         <input id="password" type="password" name="password" autocomplete="off">
         <input type="submit" value="Login">
     </form>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="/client/script.js"></script>
 </body>
 </html>
