Move SECRET_KEY to config file

--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,12 @@
     <title>Home page</title>
 </head>
     <body>
-        <h2>Home page</h2>
-        <h3>Автомобили</h3>
-        <button id="get_cars_button">Показать</button>
-        <div id="cars"></div>
+        <div class="box">
+            <h2>Home page</h2>
+            <h3>Автомобили</h3>
+            <button id="get_cars_button">Показать</button>
+            <div id="cars"></div>
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <script src="/client/script.js"></script>
