--- a/client/login.html
+++ b/client/login.html
@@ -6,14 +6,19 @@
     <title>Login</title>
 </head>
     <body>
-        <h2>Login</h2>
-        <form action="/login" method="post" id="login_form">
-            <label for="login">Login:</label>
-            <input id="login" type="text" name="login" autocomplete="off">
-            <label for="password">Password:</label>
-            <input id="password" type="password" name="password" autocomplete="off">
-            <input type="submit" value="Login">
-        </form>
+        <div class="page-wrapper">
+            <div class="box">
+                <h2>Login</h2>
+                <form action="/login" method="post" id="login_form">
+                    <label for="login">Login:</label>
+                    <input id="login" type="text" name="login" autocomplete="off">
+                    <label for="password">Password:</label>
+                    <input id="password" type="password" name="password" autocomplete="off">
+                    <input type="submit" value="Login">
+                </form>
+            </div>
+        </div>
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <script src="/client/script.js"></script>
