--- a/client/register.html
+++ b/client/register.html
@@ -5,17 +5,21 @@
     <link rel="stylesheet" href="/client/styles.css">
     <title>Register</title>
 </head>
-<body>
-    <h2>Register</h2>
-    <form action="/register" method="post"  id="register_form">
-        <label for="login">Login:</label>
-        <input id="login" type="text" name="login" autocomplete="off">
-        <label for="password">Password:</label>
-        <input id="password" type="password" name="password" autocomplete="off">
-        <input type="submit" value="Login">
-    </form>
+    <body>
+        <div class="page-wrapper">
+            <div class="box">
+                <h2>Register</h2>
+                <form action="/register" method="post"  id="register_form">
+                    <label for="login">Login:</label>
+                    <input id="login" type="text" name="login" autocomplete="off">
+                    <label for="password">Password:</label>
+                    <input id="password" type="password" name="password" autocomplete="off">
+                    <input type="submit" value="Login">
+                </form>
+            </div>
+        </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="/client/script.js"></script>
-</body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <script src="/client/script.js"></script>
+    </body>
 </html>
